2008-01-10  Geoff Norton  <gnorton@novell.com>

	* cs-tokenizer.cs: One more token to distinguish between method and lambda
	arguments

2008-01-09  Marek Safar  <marek.safar@gmail.com>

 	* doc.cs: Report better /doc crash details.
 	
2008-01-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #352536
 	* ecore.cs, assign.cs, codegen.cs: Check event assignments.

2008-01-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #352287
 	* ecore.cs, expression.cs: Do `this' access checking in all member access
 	expressions.
 	
2008-01-08  Marek Safar  <marek.safar@gmail.com>

 	* rootcontext.cs, driver.cs: Switch to linq mode by default.
 	
 	* report.cs: Reset message stacks.
 	
2008-01-08  Marek Safar  <marek.safar@gmail.com>

 	* generic.cs (InferInPhases): Correctly calculate params position.
 	
2008-01-08  Marek Safar  <marek.safar@gmail.com>

 	* cs-tokenizer.cs: No need to parse full string when parsing lambda
 	arguments.

2008-01-07  Marek Safar  <marek.safar@gmail.com>

 	* cs-tokenizer.cs: Enabled lambda arguments micro-parser for all profiles.
 	
 	* decl.cs (LookupNamespaceOrType): Don't cache names which caused an error.
 	
 	* driver.cs: Updated --help option.
 	
2008-01-07  Marek Safar  <marek.safar@gmail.com>

 	* generic.cs (InferParamsTypeArguments): Removed.
 	(InferInPhases): Add params type inference.
 	(LowerBoundInference): Fixed scoring mechanism.
 	
 	* cs-tokenizer.cs (PreProcessPragma): Use Location instead of line.
 	
2008-01-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* typemanager.cs: On 2.0 profile, GetPublicKeyToken returns an empty
	byte array for unsigned "baked" assemblies.

2008-01-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* codegen.cs: AssemblyName.GetPublicKey returns a zero-length byte
	array for assemblies that are not strongnamed.

2008-01-04  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #351481
 	* expression.cs (MemberAccess.ResolveNamespaceOrType): Use correct